<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="anflo.formularioandroid.view.activity.MainActivity">

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nombre"
            android:layout_weight="1"
            android:hint="@string/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_weight="1"
            android:hint="@string/apellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/direccion"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:hint="@string/direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/telefono"
            android:layout_weight="1"
            android:hint="@string/telefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email"
            android:layout_weight="1"
            android:hint="@string/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:textSize="18sp"
        android:text="@string/fecha_nacimiento"
        android:paddingTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/fecha"
        android:textSize="18sp"
        android:text="@string/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:textSize="18sp"
        android:text="@string/estado_civil"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner_estado_civil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nombre_usuario"
            android:layout_weight="1"
            android:hint="@string/nombre_usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/contrasena"
            android:layout_weight="1"
            android:hint="@string/contrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="35dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/listado"
            android:layout_weight="1"
            android:hint="@string/listado"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/guardar"
            android:layout_weight="1"
            android:hint="@string/guardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
